Added NavBar, Multi Carousel.

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -2,36 +2,63 @@ body{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    background-color: black;
-    color: white;
+    background-color: black !important;
+    color: white !important;
 }
 
 .App:only-child {
     margin: 3% 7%;
 }
 
+.SingleNav{
+    background-color: white;
+    padding: 10px 30px;
+    border-radius: 0 90px 90px 0;
+    border: 2px solid rebeccapurple;
+
+    position: fixed !important;
+}
+
+.SingleNav:hover{
+    animation: pulsate 1.5s infinite alternate;  
+    box-shadow: 0 0 .2rem #fff,
+            0 0 .2rem #fff,
+            0 0 2rem #bc13fe,
+            0 0 0.8rem #bc13fe,
+            0 0 2.8rem #bc13fe,
+            inset 0 0 1.3rem #bc13fe; 
+    padding-right: 35px;
+}
+
+.SingleNav a{
+    text-decoration: none;
+    color: black;
+    font-size: 1.5rem;
+}
+
+.SingleNav a:hover{
+    font-size: 1.7rem;
+    color: black;
+}
+
 /* ---------------------------- BUTTONS ---------------------------- */
 
 .CircularBtn{
-    border-radius: 100%;
-    background-color: black;
-    color: white;
-    border: 1px solid white;
-    width: 6vh;
-    height: 6vh;
+    border-radius: 50% !important;
+    width: 3rem;
+    height: 3rem;
+    margin: 0.4rem !important;
+    size: 3rem !important;
+    border: 2px solid rebeccapurple;
+    color: rebeccapurple;
+    font-size: 1.2rem !important;
+    font-weight: 200;
 }
 
 .CircularBtn:hover{
-    background-color: white;
-    color: black;
-    border: 1px solid black;
-}
-
-.Form button{
-    border-radius: 50%;
-    width: 3rem;
-    height: 3rem;
-    margin: 1rem;
+    background-color: rgb(220, 192, 248);
+    color: white;
+    border-color: rgb(249, 214, 214);
 }
 
 /* ---------------------------- TEXTS FONTS ---------------------------- */
@@ -74,6 +101,7 @@ body{
 }
 
 .neonPurpleText{
+    /* color: black; */
     text-shadow: 
     0 0 7px #fff,
     0 0 10px #fff,
@@ -106,6 +134,10 @@ body{
     font-size: 1rem;
 }
 
+.VLargeText{
+    font-size: 7rem;
+}
+
 /* ---------------------------- FORMS ---------------------------- */
 
 .Form{
@@ -128,15 +160,23 @@ input::placeholder{
 /* ---------------------------- IMAGES ---------------------------- */
 
 img{
-    max-width: 100%;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    object-fit: cover !important;    /* to fit and fill the parent box with the image without distorting/ maintains the image aspect ratio */
 }
 
 /* ---------------------------- CONTAINERS ---------------------------- */
 
+.FitInSizedBox{
+    display: inline-block;
+}
+
 .neonBox{
     border: 0.2rem solid #fff;
     border-radius: 2rem;
-    padding: 0.4em;
+    height: 100px;
+    width: 20% !important;
 }
 
 .neonBox:hover{
@@ -177,37 +217,42 @@ img{
     }
 }
 
+.SingleCarousel{
+    background-color: red;
+    padding: 3%;
+}
+
 .Block{
-    width: 100%;
-    margin: 1px;
+    padding-left: 10px;
+    padding-bottom: 20px;
+    overflow: visible !important;
+    width: 400px !important;
+    height: 300px !important;
+    /* width: 100%; */
+    /* margin: 3% 7% !important; */
 }
 
-.Block:nth-child(1), .Block:nth-child(3) {
-    width: 70%;
+.Block h3{
+    /* position: absolute;
+    top: 5% !important;
+    left: 3%; */
+    size: 5rem !important;
+    /* z-index: 1; */
 }
 
-.Block h4{
-    position: absolute;
-    /* top: -3rem; */
-    left: 3%;
-}
-
-.Block h6{
+.Block p{
     position: absolute;
     bottom: 15%;
     left: 3%;
     size: 20px;
 }
 
-.CircularBox{
-    /* border-radius: 45%; */
-    width: 50%;
-    margin-right: 3%;
-}
+/* ----------------------------  Carousel ---------------------------- */
 
-/* .CircularBox:first-child{
-    vertical-align: 100px; 
-} */
+.Carousel {
+    display: inline-block;
+    width: 700px;
+}
 
 /* ---------------------------- ALLIGNMENTS ---------------------------- */
 
@@ -234,6 +279,6 @@ img{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 200px;
+    /* height: 200px; */
     /* border: 3px solid green;  */
 }
