--- a/client/src/style.css
+++ b/client/src/style.css
@@ -2,8 +2,8 @@ body{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    background-color: black !important;
-    color: white !important;
+    /* background-color: black !important;
+    color: white !important; */
 }
 
 .App:only-child {
